fixing overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,8 @@ body{
      font-family: 'Roboto Mono', monospace;
      letter-spacing: 2px;
      position: relative;
+     height: 100%;
+     overflow: hidden;
 }
 
 button{
